--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,7 @@
 site_name: wiki.betauia.net
 theme: material
+markdown_extensions:
+  - pymdownx.highlight:
+      linenums: true
+      linenums_style: pymdownx.inline
+  - pymdownx.superfences
